# jenuroix-egnine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  bootstrap.bat  bootstrap.sh  jenuroix_compiler.cpp
docs/: API.md  BUILDING.md  EDITOR.md
examples/: 01_hello.cpp  02_movement.cpp  03_scripting.cpp  04_collision.cpp  05_events.cpp  06_model.cpp  07_full_game.cpp  08_ui_menu.cpp  09_player_fps.cpp  10_player_topdown.cpp  11_ui_inspector.cpp  12_model_viewer.cpp  13_multi_model.cpp  14_model_texture.cpp  15_physics.cpp  16_audio.cpp  17_editor.cpp  18_platformer.cpp  19_editor_app.cpp  20_scripts.cpp  21_day_night.cpp  22_particles.cpp  23_inventory.cpp
src/: EmbeddedAssets.cpp  EmbeddedAssets.h  engine.h
src/audio/: Audio.cpp  Audio.h
src/core/: Console.cpp  Console.h  EventSystem.h  Input.cpp  Input.h  InputActionMap.h  Log.h  Time.cpp  Time.h  Window.cpp  Window.h
src/ecs/: ECS.h
src/editor/: CodeGenerator.cpp  CodeGenerator.h  Gizmo.cpp  Gizmo.h  ProjectManager.cpp  ProjectManager.h  SceneEditor.cpp  SceneEditor.h  configure.h
src/editor_app/: editor_main.cpp
src/game/: Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Scene.h
src/physics/: Physics.cpp  Physics.h
src/render/: BlendLoader.cpp  BlendLoader.h  BuiltinShaders.h  Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/res/: EmbeddedRegistry.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  UI.cpp  UI.h
tools/: embed_assets.py
